--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/maps/?source=pwa",
+  "start_url": "/?utm_source=manifest",
   "background_color": "#3367D6",
   "display": "standalone",
   "scope": "/maps/",
